removed unnessary commens

--- a/project/frontend/src/app/components/navbar/navbar.component.html
+++ b/project/frontend/src/app/components/navbar/navbar.component.html
@@ -68,7 +68,7 @@
         <a mat-list-item routerLink="/admin/events">
           <span class="entry">
             <mat-icon>theater_comedy</mat-icon>
-            <span>Manage Events</span>
+            <span>Your Events</span>
           </span>
         </a>
 
