added few more changes

--- a/project/frontend/src/app/components/event-card/event-card.component.html
+++ b/project/frontend/src/app/components/event-card/event-card.component.html
@@ -1,8 +1,11 @@
 <mat-card class="example-card">
   <mat-card-header>
-    <div mat-card-avatar class="example-header-image"></div>
+    <div mat-card-avatar>
+      <img mat-card-avatar class="example-header-image" src="https://material.angular.io/assets/img/examples/shiba2.jpg">
+    </div>
     <mat-card-title>Shiba Inu</mat-card-title>
-    <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+    <mat-card-subtitle>3.5/5</mat-card-subtitle>
+    <button mat-flat-button color="primary">Past</button>
   </mat-card-header>
   <img mat-card-image  src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
   <mat-card-content>
