--- a/project/frontend/src/app/pages/admin-created-events/admin-created-events.component.html
+++ b/project/frontend/src/app/pages/admin-created-events/admin-created-events.component.html
@@ -1,4 +1,8 @@
-<button mat-button [routerLink]="['/admin/events/new']">Create Event</button>
+<div fxLayout="row" fxLayoutAlign="end center" style="margin: 10px;">
+  <button mat-raised-button [routerLink]="['/admin/events/new']">
+    <mat-icon>add</mat-icon> Create Event
+  </button>
+</div>
 
 <!-- <app-events-list></app-events-list> -->
 
