--- a/project/frontend/src/app/components/event-card/event-card.component.html
+++ b/project/frontend/src/app/components/event-card/event-card.component.html
@@ -5,7 +5,13 @@
     </div>
     <mat-card-title>Shiba Inu</mat-card-title>
     <mat-card-subtitle>3.5/5</mat-card-subtitle>
-    <button mat-flat-button color="primary">Past</button>
+    <!-- <button mat-flat-button color="primary">Past</button> -->
+    <div fxLayout="row" fxLayoutGap="10px">
+      <button mat-flat-button color="primary" class="past-button">Past</button>
+      <!-- <button mat-flat-button color="accent" class="upcoming-button">Upcoming</button> -->
+      <button mat-flat-button color="warn" class="ongoing-button">Ongoing</button>
+    </div>
+
   </mat-card-header>
   <img mat-card-image  src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
   <mat-card-content>
