--- a/project/frontend/src/app/components/navbar/navbar.component.html
+++ b/project/frontend/src/app/components/navbar/navbar.component.html
@@ -111,6 +111,14 @@
     <div class="internal-margin">
       <router-outlet></router-outlet>
     </div>
-      <!-- <app-footer></app-footer> -->
+    <div class="footer">
+      <span>Copyright &copy; 2024 ABC Com</span>
+      <a href="/">About Us</a>
+      <a href="/">Contact</a>
+    </div>
+    <h1>JUMP</h1>
   </mat-sidenav-content>
 </mat-sidenav-container>
+
+
+<!-- <h1>fsdkj</h1> -->
