--- a/project/frontend/src/app/components/organization-card/organization-card.component.html
+++ b/project/frontend/src/app/components/organization-card/organization-card.component.html
@@ -1,7 +1,6 @@
-
+<!--
 <mat-card class="example-card">
   <mat-card-header>
-    <!-- <div mat-card-avatar class="example-header-image"></div> -->
     <mat-card-title>Organization Name</mat-card-title>
     <mat-card-subtitle style="margin-bottom: 10px;">
       Rating (4.5/5) - Events (56)
@@ -14,6 +13,25 @@
     </p>
     <p style="margin-top: 10px;">
       <strong>Location:</strong> 123 Main St, Springfield, USA
+    </p>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-button (click)="showOrganizationDetails()">Show Details</button>
+  </mat-card-actions>
+</mat-card> -->
+
+
+<mat-card class="example-card">
+  <mat-card-header>
+    <mat-card-title>{{organization.name}}</mat-card-title>
+    <mat-card-subtitle style="margin-bottom: 10px;">
+      Rating ({{organization.averageRating}}/5) - Events ({{organization.totalEvents}})
+    </mat-card-subtitle>
+  </mat-card-header>
+  <img mat-card-image  src={{organization.avatar}} alt="Photo of a Shiba Inu">
+  <mat-card-content>
+    <p style="margin-top: 10px;">
+      {{organization.bio}}
     </p>
   </mat-card-content>
   <mat-card-actions>
