--- a/project/frontend/src/app/pages/profile/profile.component.html
+++ b/project/frontend/src/app/pages/profile/profile.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="profileForm" class="profile-container" *ngIf="user">
+<!-- <form [formGroup]="profileForm" class="profile-container" *ngIf="user">
   <mat-card-header>
     <div mat-card-avatar>
       <img [src]="user.avatar" alt="{{ user.name }}" class="profile-avatar">
@@ -40,4 +40,4 @@
     <button mat-raised-button color="primary" (click)="saveProfile()">Save</button>
     <button mat-button (click)="cancelEdit()">Cancel</button>
   </mat-card-actions>
-</form>
+</form> -->
