--- a/project/frontend/src/app/pages/login/login.component.html
+++ b/project/frontend/src/app/pages/login/login.component.html
@@ -1,3 +1,7 @@
+<div  fxLayout="column" fxLayoutAlign="center center" fxLayoutFill>
+
+<h2>Login Here</h2>
+
 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="example-form">
   <mat-form-field class="example-full-width">
     <mat-label>Email</mat-label>
@@ -18,9 +22,10 @@
     }
   </mat-form-field>
 
-  <button type="submit" mat-raised-button color="primary">Login</button>
 </form>
+<button type="submit" mat-raised-button color="primary">Login</button>
 
 
+</div>
 
 <!-- 00966500921889 -->
