--- a/project/frontend/src/app/pages/login/login.component.html
+++ b/project/frontend/src/app/pages/login/login.component.html
@@ -23,6 +23,7 @@
   </mat-form-field>
 
 </form>
+<a (click)="goToRegisterPage()">New Here?</a>
 <button type="submit" mat-raised-button color="primary">Login</button>
 
 
