--- a/project/frontend/src/app/pages/organization/organization.component.html
+++ b/project/frontend/src/app/pages/organization/organization.component.html
@@ -7,7 +7,7 @@
       <mat-icon>close</mat-icon>
     </button>
   </mat-form-field>
-  <button mat-raised-button color="primary" fxFlex="20%">
+  <button mat-raised-button color="primary" fxFlex="20%" (click)="search()">
     <mat-icon>search</mat-icon>
     Search
   </button>
