added few charts

--- a/project/frontend/src/app/components/admin/admin.component.html
+++ b/project/frontend/src/app/components/admin/admin.component.html
@@ -1,55 +1,3 @@
-<!--
-
-<mat-card class="total-revenue-card">
-  <h3>Total Revenue Generated: ${{ totalRevenue }}</h3>
-</mat-card>
-
-<mat-card class="average-ratings-card">
-  <h3>Average Ratings</h3>
-  <mat-list>
-    <mat-list-item *ngFor="let rating of avgRating">
-      <mat-icon matListIcon>star</mat-icon>
-      <h4 matLine>Event ID: {{ rating._id }}</h4>
-      <p matLine>Average Rating: {{ rating.averageRating }}</p>
-    </mat-list-item>
-  </mat-list>
-</mat-card>
-
-<mat-card class="sentiment-analysis-card">
-  <h3>Sentiment Analysis</h3>
-  <mat-accordion>
-    <mat-expansion-panel *ngFor="let sentiment of sentiment">
-      <mat-expansion-panel-header>
-        <mat-panel-title>
-          Event ID: {{ sentiment._id }}
-        </mat-panel-title>
-      </mat-expansion-panel-header>
-      <mat-list>
-        <mat-list-item>
-          <h4 matLine> <mat-icon matListIcon>thumb_up</mat-icon> Positive Reviews: {{ sentiment.positiveReviews }}</h4>
-        </mat-list-item>
-        <mat-list-item>
-          <h4 matLine><mat-icon matListIcon>thumbs_up_down</mat-icon>Neutral Reviews: {{ sentiment.neutralReviews }}</h4>
-        </mat-list-item>
-        <mat-list-item>
-          <h4 matLine><mat-icon matListIcon>thumb_down</mat-icon>Negative Reviews: {{ sentiment.negativeReviews }}</h4>
-        </mat-list-item>
-      </mat-list>
-    </mat-expansion-panel>
-  </mat-accordion>
-</mat-card>
-
-<mat-card class="popular-categories-card">
-  <h3>Popular Categories</h3>
-  <mat-list>
-    <mat-list-item *ngFor="let category of categories">
-      <mat-icon matListIcon>category</mat-icon> <h4 matLine>Category: {{ category._id }}</h4>
-      <p matLine>Total Events: {{ category.totalEvents }}</p>
-    </mat-list-item>
-  </mat-list>
-</mat-card> -->
-
-
 
 
 <!-- analytics.component.html -->
@@ -99,4 +47,22 @@
       </mat-list-item>
     </mat-list>
   </mat-card>
+</div>
+
+
+
+<div fxLayout="row wrap" fxLayoutAlign="space-around">
+
+  <div fxFlex="50%">
+<div class="chart-container">
+  <canvas  id="AllEventUniqueCategoriesPieChart" >{{ allEventUniqueCategoriesPieChart }}</canvas>
+</div>
+</div>
+
+<div fxFlex="50%">
+<div class="chart-container">
+  <canvas  id="TicketsLineChart" >{{ ticketsLineChart }}</canvas>
+</div>
+</div>
+
 </div>
