--- a/project/frontend/src/app/pages/event-details/event-details.component.html
+++ b/project/frontend/src/app/pages/event-details/event-details.component.html
@@ -1,5 +1,19 @@
+
+
+<div fxLayout="row wrap" fxLayoutAlign="space-around">
+
+  <div fxFlex="50%">
 <div class="chart-container">
-  <canvas  id="MyChart" >{{ chart }}</canvas>
+  <canvas  id="RatingBarChart" >{{ ratingBarChart }}</canvas>
+</div>
+</div>
+
+<div fxFlex="50%">
+<div class="chart-container">
+  <canvas  id="TicketsLineChart" >{{ ticketsLineChart }}</canvas>
+</div>
+</div>
+
 </div>
 
 <div fxLayout="row wrap" fxLayoutAlign="space-around">
