--- a/project/frontend/src/app/components/admin/admin.component.html
+++ b/project/frontend/src/app/components/admin/admin.component.html
@@ -54,15 +54,25 @@
 <div fxLayout="row wrap" fxLayoutAlign="space-around">
 
   <div fxFlex="50%">
-<div class="chart-container">
-  <canvas  id="AllEventUniqueCategoriesPieChart" >{{ allEventUniqueCategoriesPieChart }}</canvas>
+    <div class="chart-container">
+      <canvas  id="AllEventUniqueCategoriesPieChart" >{{ allEventUniqueCategoriesPieChart }}</canvas>
 </div>
 </div>
 
 <div fxFlex="50%">
-<div class="chart-container">
+  <div class="chart-container">
   <canvas  id="TicketsLineChart" >{{ ticketsLineChart }}</canvas>
 </div>
 </div>
+
+</div>
+
+
+<div fxLayout="row wrap" fxLayoutAlign="space-around">
+
+<div class="chart-container">
+  <canvas  id="ShiftsPieChart" >{{ shiftsPieChart }}</canvas>
+</div>
+
 
 </div>
