--- a/project/frontend/src/app/components/generic-pagination/generic-pagination.component.html
+++ b/project/frontend/src/app/components/generic-pagination/generic-pagination.component.html
@@ -1,5 +1,6 @@
 
-<div  fxLayout="row wrap" fxLayoutAlign="space-around center">
+<!-- <div  fxLayout="row wrap" fxLayoutAlign="space-around center"> -->
+<div  fxLayout={{fxLayout}} fxLayoutAlign={{fxLayoutAlign}}>
   <ng-container *ngFor="let item of items">
     <!-- {{ item | json }} -->
     <!-- <ng-content [ngTemplateOutlet]="template" [ngTemplateOutletContext]="{ $implicit: item }"></ng-content> -->
